<resources>
    <string name="app_name">Fajar 175</string>
    <string name="header_background">Header Background</string>
    <string name="tugas1">Task 1 (Lifecycle)</string>
    <string name="tugas2">Task 2 (Read Data and Fragment)</string>
    <string name="tugas3">Task 3 (Recyle View)</string>
    <string name="tugas4">Task 4 (Broadcast Receiver)</string>
    <string name="tugas5">Task 5 (Service)</string>
    <string name="tugas6">Task 6 CRUD</string>
    <string name="tombol_tugas">Task Button</string>
    <string name="nama">Fajar Nur Rohman</string>
    <string name="nim">17102175</string>
    <string name="lbl_kelas">Kelas</string>
    <string name="lbl_nama">Nama</string>
    <string name="lbl_nim">Nim</string>
    <string name="avatar">Image View Avatar</string>
    <string name="kelas">IF-05-E</string>
    <string name="hint_input_prodi">Input Prodi</string>
    <string name="btn_prodi">Prodi</string>
    <string name="btn_call_browser">Panggil Browser</string>
    <string name="btn_call_camera">Panggil Camera</string>
    <string name="input_phone_number">Masukan Nomor Telepon</string>
    <string name="btn_call_phone">Call Phone</string>
    <string name="btn_fragment">Fragment</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="input_nama">Masukan Nama Anda</string>
    <string name="input_nim">Masukan NIM Anda</string>
    <string name="btn_to_second_fragment">Pindah Fragmen Kedua</string>
    <string name="fragment_first">Halaman Fragment Pertama</string>
    <string name="fragment_second">Ini Halaman Fragmen Kedua</string>
    <string name="btn_kembali_beranda">Kembali Ke Beranda</string>
    <string name="tampil_list">List</string>
    <string name="tampil_grid">Grid</string>
    <string name="tampil_card_view">Card View</string>
    <string name="title_activity_practice3_maps">Map</string>
    <string name="check_sms_permission">SMS PERMISSION</string>
    <string name="coming_from">Pesan Dari</string>
    <string name="this_play">Jalankan</string>
    <string name="close">CLOSE</string>
    <string name="incoming_message">Pesan Masuk</string>
    <string-array name="music_index">
        <item>tone1</item>
        <item>tone2</item>
        <item>tone3</item>
        <item>tone4</item>
        <item>tone5</item>
    </string-array>
    <string-array name="data_name">
        <item>Wisata Pagubugan</item>
        <item>The Village Purwokerto</item>
        <item>Bukit Agaran</item>
        <item>Curug Jenggala</item>
        <item>Curug Bayan</item>
        <item>Sendang Bidadari</item>
        <item>Curug Nangga</item>
        <item>Small World Purwokerto</item>
        <item>Watu Meja</item>
        <item>Taman Angkasa Binangun</item>
    </string-array>
    <string-array name="data_description">
    <item>Berada di lereng Gunung Slamet, wisata Pagubugan akan membawa Anda merasakan betapa tenang
        dan nyamannya berada di tengah persawahan dan bermain air di sungai. Eduwisata yang berada
        di Desa Melung ini memiliki berbagai spot wisata menarik yang akan memanjakan Anda. Mulai
        dari trek jogging, outbond, camping ground, sawah pelangi, taman kelinci, berbagai spot foto
        keren dan juga Grujugan Bengkok.Di Grujugan Bengkok ini Anda bisa mandi sepuasnya dan airnya
        sangat jernih, lho! Selain itu lintasan grujugan ini juga panjang, melewati persawahan dan
        tidak dalam, sehingga aman buat si kecil. Selain itu ada juga wisata bercocok tanam bagi
        anak paud, TK maupun SD yang berkunjung. Dan yang terbaru ada kolam renang di tengah
        persawahan yang aman untuk anak-anak.
    </item>
        <item>Berlokasi tak terlalu jauh dengan pusat kota Purwokerto, The Village hadir dengan gaya
        unik khas perkampungan Eropa. Bangunan tinggi besar menyerupai kastil dengan dinding bata
        langsung mencuri perhatian begitu melangkahkan kaki ke sini. Ada beragam aktivitas yang bisa
        Anda lakukan di sini: naik perahu mengitari kanal buatan di sekitar taman rekreasi, memberi
        makan aneka binatang (burung, kelinci, sapi, domba), menunggang kuda, foto-foto dengan
        kostum Belanda, dan masih banyak lagi!
    </item>
        <item>Ingin menikmati indahnya Purwokerto dari angle lain? Mampir saja ke Bukit Agaran yang
        menawarkan pemandangan menakjubkan Purwokerto dari atas! Di bukit ini tersedia banyak sekali
        spot foto yang bisa Anda manfaatkan untuk berfoto ria. Seperti misalnya replika tangan
        raksasa dan rumah cinta.Jika cuaca cerah, Anda bisa menikmati pemandangan cantik Gunung
        Slamet yang berdiri megah dengan begitu jelas. Suasana akan berubah lebih romantis di malam
        hari karena pemandangan berubah menjadi cahaya kerlap kerlip lampu Purwokerto dari kejauhan.
        Anda pun bisa berkemah di bukit ini untuk menyaksikan matahari terbit yang tak kalah
        menawannya, lho!
    </item>
        <item>Seperti apa sih surga itu? Tak ada yang bisa menjawabnya, namun mungkin cuilannya bisa
        Anda saksikan di Curug Jenggala ini. Berada di Banyumas, curug yang masuk di wilayah
        Baturaden ini terjadi karena pertemuan beberapa sungai. Alhasil, air yang tercurah dari
        ujung bukit pun melimpah ruah, dan juga mengalir deras. Cara menikmatinya? Bisa dengan
        berada di bebatuan yang tak jauh dari titik jatuhnya air. Dijamin Anda bisa basah kuyup.
        Tapi ingat, ekstra hati-hati ya!Cara lain adalah dengan berada di titik tertentu, yang oleh
        pihak pengelola memang disiapkan secara khusus. Ada dek kayu berbentuk hati tepat berada di
        depan curug ini, pas sebagai spot berfoto, apalagi dengan pasangan. Ah, so sweet!
    </item>
        <item>Meninggalkan sejenak hiruk pikuk kota dan menikmati alam di Curug Bayan sepertinya menjadi
    alternatif yang layak dipertimbangkan. Bagaimana tidak, Anda dan keluarga bisa mendapatkan paket
    full menghilangkan stres dengan segera. Di Curug Bayan, Anda akan mendapati air terjun dengan
    debit air yang tidak terlalu besar dan deras. Pas untuk Anda bisa bermain air di bawahnya. Ingin
    cliff jumping juga bisa, lho! Suasana di sekitar Curug Bayan juga masih natural. Anda bisa
    merasakan segarnya udara pedesaan, mandi di air yang jernih dan sejuk, dan atmosfer alam yang
    bisa saja membuat Anda tak ingin kembali ke kota. Dan yang luar biasa, fasilitas di wilayah
    Curug Bayan terbilang lengkap. Jika ingin menginap pun Anda bisa langsung memilih vila-vila yang
    keren. Jangan takut kesulitan pula menemukan wilayah ini karena sudah banyak hal yang memudahkan,termasuk petunjuk jalan.</item>
        <item>Warga lokal meyakini tempat ini sebagai tempat petilasan dan untuk bermeditasi. Jika
        memang demikian, pemilihan Sendang Bidadari sebagai tempat berkegiatan itu merupakan hal
        yang tepat. Kok bisa? Jika berkunjung ke sana, Anda akan mendapati tempat dengan pemandangan
        yang keren, atmosfer yang teduh, suasana yang tenang dan udara yang segar, pas banget untuk
        bermeditasi. Selain itu, lansekap di sekitar air terjun ini juga instagenic abis.
        </item>
        <item>Ke Banyumas jangan sampai melewatkan air terjun eksotis yang satu ini, ya! Curug Nangga ini memiliki
            keindahan bebatuan dengan tujuh tingkatan yang membuat air terjun ini terasa spesial. Semua tingkatan
            di air terjun yang juga disebut-sebut sebagai miniatur air terjun Niagara ini bisa dijadikan tempat bermain air.
            Setiap tingkatannya pun cukup lebar sehingga aman untuk tempat bermain air. Namun untuk menuju curug yang satu
            ini dibutuhkan sedikit usaha karena letaknya yang tidak bisa dijangkau kendaraan. Dari tempat parkir, Anda masih
            harus berjalan kaki sekitar 2-3 KM untuk bisa sampai di curug.</item>
        <item>Kapan Anda pernah Piramida, Mesir? Atau mendatangi Menara Pisa, Italia? Atau berpose di depan Gedung Putih?
            Jika ingin melakukannya, tapi tak memiliki dana yang cukup untuk pergi ke luar negeri, silakan mempertimbangkan
            untuk melipir ke Small World Purwokerto. Dengan biaya yang jauh lebih murah, Anda sudah bisa berswafoto dengan
            background bangunan ikon dunia tersebut. Ya, Small World merupakan taman rekreasi miniatur dunia, sekaligus wahana
            edukasi untuk semua kalangan. Anda bisa menyaksikan menara Petronas, Patung Merlion hingga Big Ben London dalam skala
            yang jauh lebih kecil. Banyak spot keren dan Instagrammable di sini, lokasi yang pas bagi para pemburu swafoto. Ada pula
            taman dengan beragam bunga yang indah dan berwarna warni. Tapi, awas, jangan sampai rusak ya!</item>
        <item>Purwokerto memiliki spot istimewa untuk bisa menyaksikan pusat kota dan sekelilingnya
        dari ketinggian. Spot seru tersebut dinamai Watu Meja. Lokasinya berada di Bukit Badar, desa
        Tumiyang, Banyumas. Yang ditawarkan adalah lansekap alam perbukitan, Gunung Slamet dan
        aliran Sungai Serau. Watu Meja menjadi spot yang menarik untuk berswafoto. Batu di pinggiran
        tebing menjadi salah satu titik yang kerap dijadikan sebagai spot untuk berfoto dengan
        background di atas </item>
        <item>Anda pemburu sunrise dan sunset keren? Jika iya, silahkan masukkan Taman Angkasa Binangun sebagai
            spot yang harus Anda kunjungi.Taman Angkasa berada di puncak Gunung Depok. Yang ditawarkan adalah
            pemandangan istimewa sunrise di saat subuh, dan sunset luar biasa kala magrib. Siratan warna menakjubkan
            di momen tersebut sangat sayang untuk dilewatkan. Tapi, jika Anda tak mendapatkannya, Taman Angkasa Binangun
            tetap menawarkan pemandangan dari atas yang tak bisa dipandang sebelah mata. Anda masih bisa menyaksikan
            pemandangan alam dengan lansekap perbukitan yang menarik, panorama kota Purwokerto, Cilacap, Purbalingga
            dan Banjarnegara bisa Anda saksikan dari ketinggian 420 mdpl. Juga ada spot berfoto yang unik berupa gardu
            pandang dari bambu. Dari sini, Anda bisa berswafoto dengan background yang menarik.</item>
    </string-array>
    <string name="task_7">Task 7 (RESTFULL API)</string>
</resources>