<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <!--  BACKGROUND   -->
        <ImageView
            android:id="@+id/ivHeaderBackground"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"
            android:background="#00252323"
            android:contentDescription="@string/header_background"
            android:scaleType="fitXY"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0"
            app:srcCompat="@drawable/background" />

        <!--        AVATAR      -->
        <ImageView
            android:id="@+id/ivAvatar"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginTop="15dp"
            android:contentDescription="@string/avatar"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.051"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/avatar" />

        <TextView
            android:id="@+id/txtLblNim"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:background="#4D000000"
            android:text="@string/lbl_nim"
            android:textColor="@android:color/white"
            app:layout_constraintStart_toEndOf="@id/ivAvatar"
            app:layout_constraintStart_toStartOf="@id/ivAvatar"
            app:layout_constraintTop_toBottomOf="@id/ivAvatar" />

        <TextView
            android:id="@+id/txtNim"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="46dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="54dp"
            android:background="#4D000000"
            android:text="@string/nim"
            android:textColor="@android:color/white"
            app:layout_constraintEnd_toStartOf="@id/txtLblNim"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@id/txtLblNim"
            app:layout_constraintTop_toBottomOf="@id/ivAvatar" />

        <TextView
            android:id="@+id/txtLblNama"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="#4D000000"
            android:text="@string/lbl_nama"
            android:textColor="@android:color/white"
            app:layout_constraintStart_toStartOf="@id/ivAvatar"
            app:layout_constraintTop_toBottomOf="@id/txtLblNim" />

        <TextView
            android:id="@+id/txtNama"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="#4D000000"
            android:text="@string/nama"
            android:textColor="@android:color/white"
            app:layout_constraintStart_toStartOf="@id/txtNim"
            app:layout_constraintTop_toBottomOf="@id/txtNim" />

        <TextView
            android:id="@+id/txtLblKelas"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="#4D000000"
            android:text="@string/lbl_kelas"
            android:textColor="@android:color/white"
            app:layout_constraintStart_toStartOf="@id/txtLblNama"
            app:layout_constraintTop_toBottomOf="@id/txtLblNama" />


        <TextView
            android:id="@+id/txtKelas"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="#4D000000"
            android:text="@string/kelas"
            android:textColor="@android:color/white"
            app:layout_constraintStart_toStartOf="@id/txtNama"
            app:layout_constraintTop_toBottomOf="@id/txtNama" />

        <Button
            android:id="@+id/btnTugas1"
            android:layout_width="150dp"
            android:layout_height="100dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="20dp"
            android:contentDescription="@string/tombol_tugas"
            android:text="@string/tugas1"
            app:layout_constraintEnd_toStartOf="@id/btnTugas2"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/ivHeaderBackground" />

        <Button
            android:id="@+id/btnTugas2"
            android:layout_width="150dp"
            android:layout_height="100dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="20dp"
            android:contentDescription="@string/tombol_tugas"
            android:text="@string/tugas2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.761"
            app:layout_constraintStart_toEndOf="@id/btnTugas1"
            app:layout_constraintTop_toBottomOf="@id/ivHeaderBackground" />

        <Button
            android:id="@+id/btnTugas3"
            android:layout_width="150dp"
            android:layout_height="100dp"
            android:layout_marginTop="20dp"
            android:contentDescription="@string/tombol_tugas"
            android:text="@string/tugas3"
            app:layout_constraintEnd_toEndOf="@id/btnTugas1"
            app:layout_constraintHorizontal_bias="0.529"
            app:layout_constraintStart_toStartOf="@id/btnTugas1"
            app:layout_constraintTop_toBottomOf="@id/btnTugas1" />

        <Button
            android:id="@+id/btnTugas4"
            android:layout_width="150dp"
            android:layout_height="100dp"
            android:layout_marginTop="20dp"
            android:contentDescription="@string/tombol_tugas"
            android:text="@string/tugas4"
            app:layout_constraintEnd_toEndOf="@id/btnTugas2"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@id/btnTugas2"
            app:layout_constraintTop_toBottomOf="@id/btnTugas2" />

        <Button
            android:id="@+id/btnTugas5"
            android:layout_width="150dp"
            android:layout_height="100dp"
            android:layout_marginTop="20dp"
            android:contentDescription="@string/tombol_tugas"
            android:text="@string/tugas5"
            app:layout_constraintEnd_toEndOf="@id/btnTugas3"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@id/btnTugas3"
            app:layout_constraintTop_toBottomOf="@id/btnTugas3" />

        <Button
            android:id="@+id/btnTugas6"
            android:layout_width="150dp"
            android:layout_height="100dp"
            android:layout_marginTop="20dp"
            android:text="@string/tugas6"
            app:layout_constraintEnd_toEndOf="@id/btnTugas4"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@id/btnTugas4"
            app:layout_constraintTop_toBottomOf="@id/btnTugas4" />

        <Button
            android:id="@+id/btnTugas7"
            android:layout_width="150dp"
            android:layout_height="100dp"
            android:layout_marginTop="20dp"
            android:contentDescription="@string/tombol_tugas"
            android:text="@string/task_7"
            app:layout_constraintEnd_toEndOf="@id/btnTugas3"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@id/btnTugas5"
            app:layout_constraintTop_toBottomOf="@id/btnTugas5" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
